tests/transpiler/x/java/right_join.error
exit status 1
Main.java:38: error: incompatible types: Object cannot be converted to boolean
            if (entry.order) {
                     ^
Main.java:39: error: cannot find symbol
                System.out.println("Customer" + " " + entry.customerName + " " + "has order" + " " + entry.order.id + " " + "- $" + " " + entry.order.total);
                                                                                                                ^
  symbol:   variable id
  location: variable order of type Object
Main.java:39: error: cannot find symbol
                System.out.println("Customer" + " " + entry.customerName + " " + "has order" + " " + entry.order.id + " " + "- $" + " " + entry.order.total);
                                                                                                                                                     ^
  symbol:   variable total
  location: variable order of type Object
3 errors
